--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,30 @@ ct.air.sms.travel_fusion.search.statisticalWindowInMilliseconds=45000
 ct.air.sms.travel_fusion.search.isolationStrategy=semaphore
 
 #management.metrics.binders.hystrix.enabled=false
+management.endpoints.web.exposure.include=*
+spring.jmx.enabled=true
+
+
+
+## MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/sapient
+#spring.datasource.username=root
+#spring.datasource.password=root@123
+
+#`hibernate_sequence' doesn't exist
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+#spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+# Custom H2 Console URL
+spring.h2.console.path=/h2
